# webterminal_api

./: .env  Cargo.toml  test.py
migrations/: 20230413221329_topics.sql  20230413221338_sessions.sql  20230413221350_hierarchy.sql
src/: authorise.rs  main.rs
