[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.12", features = ["ws"]}
futures = "0.3.28"
jsonwebtoken = "8.3.0"
parser ={ path = "../parser"}
parser_macros ={ path = "../parser/parser_macros"}
reqwest = "0.11.16"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
